--- a/Model simulation and parameter fitting.ipynb
+++ b/Model simulation and parameter fitting.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "37b994f2",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
     "fig, axes = plt.subplots(1, len(h_values), figsize=(18, 6))\n",
     "\n",
     "for ax, h in zip(axes, h_values):\n",
-    "    # Aggregate your returns\n",
+    "    # Aggregate returns\n",
     "    n_blocks = T // h\n",
     "    aggregated = np.array([series[j*h:(j+1)*h].sum() for j in range(n_blocks)])\n",
     "    \n",
@@ -1307,7 +1307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare your data & network\n",
+    "# Prepare the data & network\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "GNGARCH_data_torch = torch.tensor(X_data, dtype=torch.float32).to(device)  # load the simulated X_data, shape (T, d)\n",
     "T, d = GNGARCH_data_torch.shape\n",
@@ -1522,7 +1522,7 @@
     "    burnin = int(T * 0.2)\n",
     "    X_data = X_sim[burnin:, :]\n",
     "\n",
-    "    # Prepare your data & network\n",
+    "    # Prepare the data & network\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    GNGARCH_data_torch = torch.tensor(X_data, dtype=torch.float32).to(device)  # load the simulated X_data, shape (T, d)\n",
     "    T, d = GNGARCH_data_torch.shape\n",
